--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,6 +1,6 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?efamo#1" target="_blank">首页</a> | <a href="https://d3c3t179l61pwn.cloudfront.net/1?udmadem" target="_blank">动态网</a> | <a href="https://dnuodzs8nln8v.cloudfront.net/2?xjzsi" target="_blank">大纪元</a> | <a href="https://dkx26vh7i5y84.cloudfront.net/4?oxhovrrp" target="_blank">看中国</a> | <a href="https://d13zv7yhtbxwll.cloudfront.net/pHh5q?pwzjtlim" target="_blank">新生网</a> | <a href="https://d53tcmkdq4r1q.cloudfront.net/tktpt?ycqqwrhn" target="_blank">阿波罗网</a> | <a href="https://d12gl57lrewmhb.cloudfront.net/Mjpvu?xnqvw" target="_blank">干净世界</a> | <a href="https://dh9kqnflpbxz3.cloudfront.net/10?hcqagn" target="_blank">退党服务</a> | <a href="https://d3siwajeg0khti.cloudfront.net/Rffqf?euqfe" target="_blank">明慧广播</a> | <a href="https://d1nu9fv1hhdo43.cloudfront.net/nw9Vn?sdwpihuyr" target="_blank">传奇时代</a> | <a href="https://dn3dhcszbgs9s.cloudfront.net/AF9AG?wwioz" target="_blank">新境界影视</a> | <a href="https://d1ntfewljph5k2.cloudfront.net/zqMQA?pamvfcqq" target="_blank">文昭谈论</a> | <a href="https://d1znr9c9sm73cv.cloudfront.net/7?hwozqochy" target="_blank">明慧</a></p><p><a href="https://d23a1u4ljgwmvy.cloudfront.net/9?pzfmdmyrz" target="_blank">大法</a> | <a href="https://dmepc9x6zy689.cloudfront.net/3?nvgfhiueo" target="_blank">新唐人</a> | <a href="https://dh48pl2d5tlkv.cloudfront.net/obAhT?toubmnf" target="_blank">人民报</a> | <a href="https://d239x61949z6p.cloudfront.net/xXNHu?sisel" target="_blank">放光明</a> | <a href="https://dh9kqnflpbxz3.cloudfront.net/5?bmlgpe" target="_blank">新纪元</a> | <a href="https://d3l8osd9w9ntl9.cloudfront.net/6?gbkutvn" target="_blank">希望之声</a> | <a href="https://d1lulvfep8g527.cloudfront.net/11?rgvpcsxv" target="_blank">无界网络</a> | <a href="https://dlp02mn13eakq.cloudfront.net/Pueji?bizniwbyr" target="_blank">追查国际</a> | <a href="https://d2axefeaz3j87r.cloudfront.net/16?bymvapnqn" target="_blank">明慧之窗</a> | <a href="https://d12ogqhrsnt8ma.cloudfront.net/LdvzZ?rcpvd" target="_blank">细语人生</a> | <a href="https://djwddd4nnr0na.cloudfront.net/fBn3r?dknptkjdp" target="_blank">新世纪影视</a> | <a href="https://d2p23c289x62lr.cloudfront.net/PUWMb?mprxl" target="_blank">江峰时刻</a> | <a href="https://duxu97yt14q37.cloudfront.net/8?hslzqzo" target="_blank">正见</a></p></td></tr>
-<tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688959.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2026/01/id14687458-GettyImages-2202765589-320x200.jpg"><p align="center">二十大后 中共18名上将被查 20上将“失踪”</p></a>
-<a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688959.md#1" title="二十大后 中共18名上将被查 20上将“失踪”""><img width="73" src="https://i.epochtimes.com/assets/uploads/2026/01/id14687458-GettyImages-2202765589-320x200.jpg">&nbsp;</a>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?nzadsliov#1" target="_blank">首页</a> | <a href="https://dycg1eql8aigr.cloudfront.net/1?duivpbyh" target="_blank">动态网</a> | <a href="https://d3sh8rhxyvin24.cloudfront.net/2?aobldx" target="_blank">大纪元</a> | <a href="https://d169wr9ny4m3ww.cloudfront.net/4?pyrpx" target="_blank">看中国</a> | <a href="https://d2rum6kyy1zd7y.cloudfront.net/pHh5q?ezaalp" target="_blank">新生网</a> | <a href="https://d13zv7yhtbxwll.cloudfront.net/tktpt?qujrkzf" target="_blank">阿波罗网</a> | <a href="https://d1znr9c9sm73cv.cloudfront.net/Mjpvu?bjlkh" target="_blank">干净世界</a> | <a href="https://d12gl57lrewmhb.cloudfront.net/10?henan" target="_blank">退党服务</a> | <a href="https://d3ap8ixfubqypf.cloudfront.net/Rffqf?rwqelqpnl" target="_blank">明慧广播</a> | <a href="https://d2rq98et8nmaey.cloudfront.net/nw9Vn?csgclhx" target="_blank">传奇时代</a> | <a href="https://d2cj9ah31kn8fl.cloudfront.net/AF9AG?lzclwnhsc" target="_blank">新境界影视</a> | <a href="https://dsqxb3b7muii1.cloudfront.net/zqMQA?afnryo" target="_blank">文昭谈论</a> | <a href="https://dwzgr3popmlhv.cloudfront.net/7?sjxopmsm" target="_blank">明慧</a></p><p><a href="https://d18bx7gz18d1cs.cloudfront.net/9?llecr" target="_blank">大法</a> | <a href="https://d265ujbtchne9r.cloudfront.net/3?jmsmxsej" target="_blank">新唐人</a> | <a href="https://d10efcw5kfoez9.cloudfront.net/obAhT?kdhvbybil" target="_blank">人民报</a> | <a href="https://d1xqyoddjp48c4.cloudfront.net/xXNHu?cituqsnp" target="_blank">放光明</a> | <a href="https://d1fejrztdgsube.cloudfront.net/5?dgeys" target="_blank">新纪元</a> | <a href="https://d1qf0g0z67vzsk.cloudfront.net/6?jxqlpyto" target="_blank">希望之声</a> | <a href="https://d37g5boc7rm625.cloudfront.net/11?phuzczec" target="_blank">无界网络</a> | <a href="https://d1fejrztdgsube.cloudfront.net/Pueji?bdotcml" target="_blank">追查国际</a> | <a href="https://dfu0th2rj4x8t.cloudfront.net/16?cwzve" target="_blank">明慧之窗</a> | <a href="https://d2vpfo96xp4pjo.cloudfront.net/LdvzZ?ghswvax" target="_blank">细语人生</a> | <a href="https://db8nk66phkh66.cloudfront.net/fBn3r?tfcuk" target="_blank">新世纪影视</a> | <a href="https://d2axefeaz3j87r.cloudfront.net/PUWMb?bjxjogqn" target="_blank">江峰时刻</a> | <a href="https://d1k1m1fxotwyij.cloudfront.net/8?pabybty" target="_blank">正见</a></p></td></tr>
+<tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688959.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2026/01/id14687458-GettyImages-2202765589-320x200.jpg"><p align="center">中共二十大后18名上将被查20上将“失踪”</p></a>
+<a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688959.md#1" title="中共二十大后18名上将被查20上将“失踪”""><img width="73" src="https://i.epochtimes.com/assets/uploads/2026/01/id14687458-GettyImages-2202765589-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688889.md#1" title="德州选举 民主党人成功翻盘获州参议员席位""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/07/id13103659-Canon-EOS-70D-3648x2432_000072-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/26/1/22/n14681521.md#1" title="进化骗局(7) 北京“猿人”的高超骗术""><img width="73" src="https://i.epochtimes.com/assets/uploads/2026/01/id14681539-jinhuapianju07-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688536.md#1" title="古特雷斯：联合国或于7月面临资金断裂危机""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/06/id14022488-GettyImages-1258818274-320x200.jpg">&nbsp;</a>
@@ -13,24 +13,24 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688528.md#1" title="美科学家研发稀土提取新技术 产量可倍增""><img width="73" src="https://i.epochtimes.com/assets/uploads/2026/02/id14688533-EpochImages-6388842067-xl-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688719.md#1" title="神韵加州千橡爆满 神性内涵打动艺界精英""><img width="73" src="https://i.epochtimes.com/assets/uploads/2026/02/id14688720-260131212731100815-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://1992513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>6分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14689005.md#1">制片人谈《梅拉尼娅》：展现第一夫人风采的历史性影片</a><br>
-:clock8: <em>28分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14689023.md#1">张又侠遭清洗 川普总统怎么看</a><br>
-:clock8: <em>41分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14689009.md#1">广汽集团预计2025年亏损近90亿 由盈转损</a><br>
-:clock8: <em>46分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688988.md#1">万科预计2025年亏820亿 两年亏损超总市值</a><br>
-:clock8: <em>54分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14689003.md#1">川普肯定诺姆和霍曼成绩 称边境遣返政策不变</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14689002.md#1">布兰奇：前CNN主播参与明州教堂抗议事件策划</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688921.md#1">【重播】川普及内阁成员抵达海湖庄园婚礼现场</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688995.md#1">乔州一旅馆枪击案 造成警员一殉职一受重伤</a><br>
-:clock8: <em>4小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688964.md#1">川普：正与古巴最高层对话 预计会达成协议</a><br>
-:clock8: <em>4小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688959.md#1">二十大后 中共18名上将被查 20上将“失踪”</a><br>
+:clock8: <em>16分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688961.md#1">《梅拉尼娅》创票房纪录 首映收入700万美元</a><br>
+:clock8: <em>26分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14689005.md#1">【专访】制片人谈《梅拉尼娅》拍摄细节</a><br>
+:clock8: <em>48分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14689023.md#1">张又侠遭清洗 川普总统怎么看</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14689009.md#1">广汽集团预计2025年亏损近90亿 由盈转损</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688988.md#1">万科预计2025年亏820亿 两年亏损超总市值</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14689003.md#1">川普肯定诺姆和霍曼成绩 称边境遣返政策不变</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14689002.md#1">布兰奇：前CNN主播参与明州教堂抗议事件策划</a><br>
+:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688921.md#1">【重播】川普及内阁成员抵达海湖庄园婚礼现场</a><br>
+:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688995.md#1">乔州一旅馆枪击案 造成警员一殉职一受重伤</a><br>
+:clock8: <em>5小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688964.md#1">川普：正与古巴最高层对话 预计会达成协议</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14687999.md#1">军方缺席中共政治局会议 专家析内讧后遗症</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688147.md#1">中共吁官兵支持处理张又侠 被指证军心不稳</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687374.md#1">中共军报谈反腐避提张又侠 军队动向异常</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14687961.md#1">又一老领导去世 张又侠所送花圈传遭拆除</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/26/1/29/n14686999.md#1">金价大跳水 A股黄金概念板块掀“跌停潮”</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14687983.md#1">中共应急管理部长王祥喜缺席会议 传被调查</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688457.md#1">印度学者：张又侠落马直接影响中共21大</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14687983.md#1">中共应急管理部长王祥喜缺席会议 传被调查</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688376.md#1">【佳音时刻】张又侠案全面黑箱化 知情人曝内情</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687859.md#1">中共人大代表半夜遭劫匪袭击 巴黎豪宅遭窃</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687811.md#1">陈伟义投案 曾是习心腹蔡奇主政台州时旧部</a><br>
@@ -44,7 +44,7 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/26/1/26/n14684363.md#1">【独家】张又侠被政治定性 军内高度紧张</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/26/1/24/n14683007.md#1">王友群：中共耍流氓攻击神韵 成国际笑柄</a><br>
 <br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1">更多......</a></p></td><td VALIGN=TOP width="371">
-<a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688959.md#1">二十大后 中共18名上将被查 20上将“失踪”</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688959.md#1">中共二十大后18名上将被查20上将“失踪”</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688680.md#1">袁斌：从中共军报两篇重磅文章透析张又侠案</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14687992.md#1">为何伊朗监视系统难确定林肯号航母位置</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688445.md#1">沈舟：中共宣传的上甘岭战役不在上甘岭</a><br>
@@ -108,8 +108,8 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/26/1/24/n14683035.md#1">实战派张又侠刘振立落马 分析：重创中共军力</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/26/1/24/n14682758.md#1">柳岩主演《金刚不坏》 上映48天票房仅70万</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/26/1/22/n14681874.md#1">分析：中共加速清除裸官 泄政权倾覆焦虑</a><br>
-<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d20g9kt1xg2oep.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d20g9kt1xg2oep.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d20g9kt1xg2oep.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d20g9kt1xg2oep.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d20g9kt1xg2oep.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d20g9kt1xg2oep.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d20g9kt1xg2oep.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d20g9kt1xg2oep.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d20g9kt1xg2oep.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d20g9kt1xg2oep.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d20g9kt1xg2oep.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d20g9kt1xg2oep.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d20g9kt1xg2oep.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d20g9kt1xg2oep.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d20g9kt1xg2oep.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d20g9kt1xg2oep.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d20g9kt1xg2oep.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d20g9kt1xg2oep.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d20g9kt1xg2oep.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d20g9kt1xg2oep.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d20g9kt1xg2oep.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d20g9kt1xg2oep.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d20g9kt1xg2oep.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d20g9kt1xg2oep.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d20g9kt1xg2oep.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d20g9kt1xg2oep.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 42,520</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d220ezsxx5n86z.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d220ezsxx5n86z.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d220ezsxx5n86z.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d220ezsxx5n86z.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d220ezsxx5n86z.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d220ezsxx5n86z.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d220ezsxx5n86z.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d220ezsxx5n86z.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d220ezsxx5n86z.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d220ezsxx5n86z.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d220ezsxx5n86z.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d220ezsxx5n86z.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d220ezsxx5n86z.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d220ezsxx5n86z.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d220ezsxx5n86z.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d220ezsxx5n86z.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d220ezsxx5n86z.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d220ezsxx5n86z.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d220ezsxx5n86z.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d220ezsxx5n86z.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d220ezsxx5n86z.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d220ezsxx5n86z.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d220ezsxx5n86z.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d220ezsxx5n86z.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d220ezsxx5n86z.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d220ezsxx5n86z.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 42,520</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
